--- a/app.json
+++ b/app.json
@@ -7,9 +7,9 @@
         "Save restricted content",
         "bot"
     ],
-    "repository": "https://github.com/vasusen-code/SaveRestrictedContentBot",
+    "repository": "https://github.com/Gobotmade/SaveRestrictedContentBot23",
     "website": "",
-    "success_url": "https://t.me/DroneBots",
+    "success_url": "https://t.me/Adrenalinators",
     "env": {
         "API_HASH": {
             "description": "Your API HASH from my.telegram.org",
